--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h2>ALL my Project Link</h2>
 
-  <h1> Project </h1>
+  <h1> FRONT-END Project </h1>
    <h2> <a href="https://hardikdeveloper.netlify.app/">1 . Resume Build Project : Link</a><br>
     <a href="https://github.com/HardikPrajapati555/resume-build">github code : Link</a>
   </h2>
